Add a main-image tag

--- a/_posts/2019-12-22-casting.md
+++ b/_posts/2019-12-22-casting.md
@@ -4,6 +4,7 @@ title: Casting Bronze
 description: Lost Wax Casting of Bronze into Ceramic Shells
 date: 2019-12-22
 author: Jono Shields
+main-image:/public/image/casting-done.jpg
 ---
 
 Over the last few years I have moved away from buying gifts and into making things. This is us fighting the man on consumerism, but also a cool way to make gifts really personal.
